2005-12-13	Benedikt Meurer <benny@xfce.org>

	* exo/exo-gdk-pixbuf-extensions.{c,h}, exo/exo.symbols: Add new function
	  exo_gdk_pixbuf_scale_down(), which scales down an icon to fit into
	  given dest_width/dest_height, optionally preserving the aspect ratio
	  of the source icon.
	* docs/reference/tmpl/exo-gdk-pixbuf-extensions.sgml,
	  docs/reference/exo-sections.txt: Add new function to the reference
	  manual.
	* docs/reference/tmpl/exo-ellipsized-label.sgml,
	  exo/exo-ellipsized-label.h: Small documentation fix.
	* HACKING, README: Update URLs and descriptions.

2005-12-05	Benedikt Meurer <benny@xfce.org>

	* tests/test-exo-string.c, docs/reference/, exo/exo.symbols,
	  exo/exo-string.{c,h}, tests/Makefile.am: Add new utility function
	  exo_str_replace().

2005-12-04	Benedikt Meurer <benny@xfce.org>

	* HACKING: Add reminder to increment library major version whenever
	  new functions got added.

2005-12-03	Benedikt Meurer <benny@xfce.org>

	* configure.in.in: Build the gnuc visibility test program with -Wall
	  -Werror, as gcc reports warnings instead of errors if ELF visibility
	  is not supported for the target platform, see bug #1253.

2005-11-30	Benedikt Meurer <benny@xfce.org>

	* docs/reference/, exo/exo-gtk-extensions.{c,h}, exo/exo.symbols: Add
	  exo_gtk_object_ref_sink(), which takes a reference on the object and
	  drops the floating reference to the object (if any).

2005-11-29	Benedikt Meurer <benny@xfce.org>

	* docs/reference/, exo/exo-binding.h: Update reference documentation.

2005-11-22	Benedikt Meurer <benny@xfce.org>

	* exo/exo-string.{c,h}, exo/exo.symbols: Add exo_intern_string() and
	  exo_intern_static_string(), which transform a string to it's GQuark
	  representation and thereby can be used to reduce the memory overhead
	  for static strings that will be handed to g_signal_new(),
	  g_type_register_*(), etc.
	* exo/exo-cell-renderer-ellipsized-text.c: We don't need to provide an